--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,5 +22,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Test with Maven
+      run: mvn surefire:test
     - name: Build with Maven
       run: mvn package 
